[gd_scene load_steps=4 format=3 uid="uid://bo5vjvb1s1fyg"]

[ext_resource type="PackedScene" uid="uid://176g3cp8n76a" path="res://scenes/block_environment/g_block_schema/g_block/g_block.tscn" id="1_pendl"]
[ext_resource type="Script" path="res://scenes/block_environment/g_block_schema/block_begin/g_block_begin.gd" id="2_7df40"]
[ext_resource type="PackedScene" uid="uid://dvd6ysg6qyrj2" path="res://scenes/block_environment/g_block_schema/g_block/gui_point_links/g_begin_point.tscn" id="3_ebcp8"]

[node name="GBlockBegin" node_paths=PackedStringArray("begin_point") instance=ExtResource("1_pendl")]
script = ExtResource("2_7df40")
begin_point = NodePath("BeginPoints/GBeginPoint")

[node name="ActivateButton" type="Button" parent="Control/Content" index="2"]
layout_mode = 2
text = "Начать"

[node name="GBeginPoint" parent="BeginPoints" index="0" node_paths=PackedStringArray("block") instance=ExtResource("3_ebcp8")]
position = Vector2(0, 50)
block = NodePath("../..")

[connection signal="pressed" from="Control/Content/ActivateButton" to="." method="_on_activate_button_pressed"]
